[gd_scene load_steps=10 format=3 uid="uid://b5ohg27561w8n"]

[ext_resource type="Script" path="res://Scenes/PlayingCard/PlayingCard.gd" id="1_e3yaw"]
[ext_resource type="Texture2D" uid="uid://cltejjg5h1kkk" path="res://Assets/cards_large/card_empty.png" id="3_0ir7p"]
[ext_resource type="Texture2D" uid="uid://lve4xy07ovlc" path="res://Assets/cards_large/card_back.png" id="3_1rd7j"]
[ext_resource type="Theme" uid="uid://duyan8gqafjo7" path="res://Scenes/PlayingCard/PlayingCardTheme.tres" id="4_af5wu"]
[ext_resource type="Script" path="res://Components/StateMachine/StateMachine.gd" id="5_3i08o"]
[ext_resource type="Script" path="res://Scenes/PlayingCard/IdleState.gd" id="6_ebu7i"]
[ext_resource type="Script" path="res://Scenes/PlayingCard/SelectedState.gd" id="7_p6r4o"]
[ext_resource type="Script" path="res://Scenes/PlayingCard/DroppedState.gd" id="8_h0d8u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3bpiv"]
size = Vector2(10, 10)

[node name="PlayingCard" type="Node2D" node_paths=PackedStringArray("frontFace", "rearFace")]
script = ExtResource("1_e3yaw")
frontFace = NodePath("FrontFace")
rearFace = NodePath("RearFace")

[node name="RearFace" type="Sprite2D" parent="."]
texture = ExtResource("3_1rd7j")
region_enabled = true
region_rect = Rect2(12, 3, 40, 58)

[node name="FrontFace" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_0ir7p")
region_enabled = true
region_rect = Rect2(12, 3, 40, 58)

[node name="Button" type="Button" parent="."]
offset_left = -20.0
offset_top = -29.0
offset_right = 20.0
offset_bottom = 29.0
theme = ExtResource("4_af5wu")
flat = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_3bpiv")
debug_color = Color(0.956863, 0, 0.541176, 0.419608)

[node name="States" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_3i08o")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="States"]
script = ExtResource("6_ebu7i")

[node name="Selected" type="Node" parent="States"]
script = ExtResource("7_p6r4o")

[node name="Dropped" type="Node" parent="States"]
script = ExtResource("8_h0d8u")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
